--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha",
     "coverage": "istanbul cover _mocha -- -R spec --timeout 5000 --recursive",
-    "coverage:check": "istanbul check-coverage"
+    "coverage:check": "istanbul check-coverage",
+    "cov":"istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
