--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha",
     "coverage": "istanbul cover _mocha -- -R spec --timeout 5000 --recursive",
-    "coverage:check": "istanbul check-coverage"
+    "coverage:check": "istanbul check-coverage",
+    "cover": "istanbul cover --report lcov node_modules/mocha/bin/_mocha -- -R spec test/*.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
   "homepage": "https://github.com/CatchZeng/cat-jsutils#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.1.0"
   }
