--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "cat-jsutils",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "js utils",
   "main": "index.js",
+  "readmeFilename": "README.md",
   "scripts": {
     "test": "mocha",
     "coverage": "istanbul cover _mocha -- -R spec --timeout 5000 --recursive",
